Added imgui Controller And Models
Added a class which allows rendering of an imgui window, also added some
models: axe and rock

--- a/Shaders/CourseworkProject/CourseworkProject.vcxproj
+++ b/Shaders/CourseworkProject/CourseworkProject.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="ShadowShader.cpp" />
     <ClCompile Include="SpecularLightShader.cpp" />
     <ClCompile Include="TextureShader.cpp" />
+    <ClCompile Include="UiManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App1.h" />
@@ -128,6 +129,7 @@
     <ClInclude Include="ShadowShader.h" />
     <ClInclude Include="SpecularLightShader.h" />
     <ClInclude Include="TextureShader.h" />
+    <ClInclude Include="UiManager.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shaders\depth_ps.hlsl">
