--- a/Shaders/CourseworkProject/CourseworkProject.vcxproj.filters
+++ b/Shaders/CourseworkProject/CourseworkProject.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="TextureShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UiManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App1.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TextureShader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UiManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
