--- a/Shaders/CourseworkProject/imgui.ini
+++ b/Shaders/CourseworkProject/imgui.ini
@@ -4,6 +4,21 @@ Size=400,400
 Collapsed=0
 
 [ImGui Demo]
+Pos=95,2
+Size=550,680
+Collapsed=0
+
+[Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[ImGui Metrics]
+Pos=60,60
+Size=388,194
+Collapsed=0
+
+[Shader Coursework UI]
 Pos=60,60
 Size=550,680
 Collapsed=1
