--- a/Shaders/CourseworkProject/CourseworkProject.vcxproj.filters
+++ b/Shaders/CourseworkProject/CourseworkProject.vcxproj.filters
@@ -103,5 +103,8 @@
     <FxCompile Include="shaders\tessellation_vs.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="tessellationDepth_ds.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
