--- a/Shaders/CourseworkProject/CourseworkProject.vcxproj
+++ b/Shaders/CourseworkProject/CourseworkProject.vcxproj
@@ -144,6 +144,9 @@
     <FxCompile Include="shaders\tessellation_hs.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </FxCompile>
+    <FxCompile Include="shaders\tessellation_noise_ds.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </FxCompile>
     <FxCompile Include="shaders\tessellation_ps.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </FxCompile>
