Added Voronoi Algorithm
The application now divides the grid into voronoi regions, finds the
centre of the region and orders the regions according to area

--- a/Shaders/VoronoiBoomtown/VoronoiBoomtown.vcxproj
+++ b/Shaders/VoronoiBoomtown/VoronoiBoomtown.vcxproj
@@ -121,6 +121,7 @@
     </ClCompile>
     <ClCompile Include="HorizontalBlurShader.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Region.cpp" />
     <ClCompile Include="SpecularLightShader.cpp" />
     <ClCompile Include="TessellationShader.cpp" />
     <ClCompile Include="TextureShader.cpp" />
