--- a/Shaders/VoronoiBoomtown/VoronoiBoomtown.vcxproj.filters
+++ b/Shaders/VoronoiBoomtown/VoronoiBoomtown.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Cell.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Region.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App1.h">
