--- a/Shaders/VoronoiBoomtown/imgui.ini
+++ b/Shaders/VoronoiBoomtown/imgui.ini
@@ -19,7 +19,12 @@ Size=388,194
 Collapsed=0
 
 [Shader Coursework UI]
-Pos=56,16
+Pos=122,18
 Size=550,680
-Collapsed=1
+Collapsed=0
+
+[Voronoi Boomtown Controls]
+Pos=39,70
+Size=550,680
+Collapsed=0
 
